5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4481/executions/1807_2567.log
== TEST (2019-06-11 16:57:28) 
-- CODE:
from numpy import*

a=int(input('numero: '))
b='*'
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a):
	c=b*(a-(a-i))
	print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 16:59:23) 
-- CODE:
from numpy import*

a=int(input('numero: '))
b='*'
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a):
	c=b*(a-i)
	print(c)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:00:37) 
-- CODE:
from numpy import*

a=int(input('numero: '))
b='*'
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a(a-i)
	print(c)


-- ERROR:
File "XXXX", line 10
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:00:50) 
-- CODE:
from numpy import*

a=int(input('numero: '))
b='*'
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a-(a-i)
	print(c)


-- ERROR:
File "XXXX", line 10
    print(c)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:01:13) 
-- CODE:
from numpy import*

a=int(input('numero: '))
b='*'
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a-(a-i))
	print(c)
		  

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:01:23) 
-- CODE:
from numpy import*

a=int(input('numero: '))
b='*'
for i in range(a):
	c=b*(a-i)
	print(c)
for i in range(a+1):
	c=b*(a-(a-i))
	print(c)
		  

-- EXECUTION TIME:
1.16927
-- TEST CASE 1:
---- input:
8
---- correct output:
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********

---- user output:
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
-- TEST CASE 2:
---- input:
11
---- correct output:
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********

---- user output:
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
-- TEST CASE 3:
---- input:
25
---- correct output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*
*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************

---- user output:
*************************
************************
***********************
**********************
*********************
********************
*******************
******************
*****************
****************
***************
**************
*************
************
***********
**********
*********
********
*******
******
*****
****
***
**
*

*
**
***
****
*****
******
*******
********
*********
**********
***********
************
*************
**************
***************
****************
*****************
******************
*******************
********************
*********************
**********************
***********************
************************
*************************
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
